syntax = "proto3";
package people;

message Person {
  string username = 1;
  int32 id = 2;
  required string email = 3;

  message FullName {
    required string first_name = 1;
    string last_name = 2;
  }

  FullName user_full_name = 4;
  repeated string phones = 5;
}

message Workers {
  repeated Person people = 1;
}